stDemoOne/force-app/main/default/objects/LPI_Demo_Data__c/LPI_Demo_Data__c.object-meta.xml
<CustomObject>
    <label>LPI Demo Data</label>
    <nameField>
        <label>LPI Demo Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LPI Demo Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>