stDemoOne/force-app/main/default/objects/LPI_Demo_Data__c/fields/Demo_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demo Scenario</label>
    <referenceTo>LPI_Demo_Scenario__c</referenceTo>
    <relationshipLabel>LPI Demo Data</relationshipLabel>
    <relationshipName>LPI_Demo_Data</relationshipName>
    <type>Lookup</type>
</CustomField>