stDemoOne/force-app/main/default/objects/LPI_Demo_Data__c/fields/DemoSelected__c.field-meta.xml
<CustomField>
    <fullName>DemoSelected__c</fullName>
    <label>DemoSelected</label>
    <length>100</length>
    <type>Text</type>
</CustomField>