stDemoOne/force-app/main/default/objects/LPI_Demo_Data__c/fields/DomainName__c.field-meta.xml
<CustomField>
    <fullName>DomainName__c</fullName>
    <label>DomainName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>